Product advance search, add product, edit product, product list layouts

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -26,7 +26,7 @@
           <div class="dropdown-menu" aria-labelledby="admin">
             <a class="dropdown-item" href="../default/">Manage Users</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="../cerulean/">Manage Products</a>
+            <a class="dropdown-item" [routerLink]="['product-list']">Manage Products</a>
             <a class="dropdown-item" [routerLink]="['approve-product']">Review Products</a>
             <a class="dropdown-item" [routerLink]="['categories']">Manage Categories</a>
 
