--- a/web/src/app/modules/shopping/checkout/checkout.component.html
+++ b/web/src/app/modules/shopping/checkout/checkout.component.html
@@ -21,7 +21,7 @@
       <h6 class="col-3">$cart.total</h6>
     </div>
      <br> <br>
-    <form method="post" action="/checkout">
+    <!-- <form method="post" action="/checkout"> -->
         <div class="alert alert-dismissible alert-danger" >
           <button type="button" class="close" data-dismiss="alert">&times;</button>
           error, please make sure that all billing information correct and try submitting again.
@@ -122,7 +122,7 @@
           <i class="fa fa-home"></i> Continue shopping
         </a>
       </div>
-    </form>
+    <!-- </form> -->
 
   </div>
 </div>
