--- a/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
+++ b/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
@@ -11,53 +11,55 @@
     <div class="col-12">
       <div class="collapse row" id="collapseSearch">
         <div class="card card-body col-md-12 col-sm-12 adv-search-crd">
-          <form>
+            <form [formGroup]="searchForm" (ngSubmit)="OnSubmit()">
+
             <fieldset>
               <div class="form-group">
-                <label for="product">Search</label>
-                <input type="text"
-                       id="product"
+                <label for="productName">Search</label>
+                <input type="text" [formControl]="searchForm.get('productName')"
+                       id="productName"
+                       name="productName"
                        class="form-control"
                        placeholder="Search text"
                        max="100">
               </div>
               <div class="row">
                 <div class="form-group col-4">
-                  <label for="vendor">Vendor</label>
-                  <input type="text"
-                         id="vendor"
+                  <label for="vendorName">Vendor</label>
+                  <input type="text" [formControl]="searchForm.get('vendorName')"
+                         id="vendorName"
                          class="form-control"
                          placeholder="Vendor name"
                          max="50">
                 </div>
                 <div class="form-group col-4">
-                  <label for="category">Category</label>
-                  <input type="text"
+                  <label for="categoryName">Category</label>
+                  <input type="text" [formControl]="searchForm.get('categoryName')"
                          class="form-control"
-                         id="category"
+                         id="categoryName"
                          placeholder="Category name"
                          max="50">
                 </div>
                 <div class="form-group col-2">
                   <label for="priceFrom">Price From</label>
-                  <input type="number"
+                  <input type="number" [formControl]="searchForm.get('priceFrom')"
                          step="0.01"
                          class="form-control"
                          id="priceFrom"/>
                 </div>
                 <div class="form-group col-2">
                   <label for="priceTo">Price To</label>
-                  <input type="number"
+                  <input type="number" [formControl]="searchForm.get('priceTo')"
                          step="0.01"
                          class="form-control"
                          id="priceTo"/>
                 </div>
               </div>
             </fieldset>
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" >
               <i class="fa fa-search-plus"></i> Search
             </button> &nbsp;
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary" (click)="clear()" >
               <i class="fa fa-eraser" aria-hidden="true"></i> clear
             </button>
           </form>
@@ -66,16 +68,18 @@
     </div>
     <!-- Products Catalog -->
     <div class="row">
-      <!--    <c:forEach var="product" items="${products}">-->
-      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+     
+
+      
+      <div  *ngFor="let product of (lstProduct | async)?.data" class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
         <div class="img-box">
           <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
           <div class="brd img-box-p r-btm-5 shw-hdn col-12">
             <div>
-              <div class="head-text float-left">Long product name goes here</div>
-              <div class="float-right">$000.00</div>
+              <div class="head-text float-left">{{product.name}}</div>
+              <div class="float-right">${{product.price}}</div>
             </div>
-            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
+            <div class="details-text float-left">{{product.shortDescription}}</div>
 
             <div class="add-cart">
               <button type="submit" class="btn btn-primary btn-add-cart">
@@ -85,98 +89,8 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-        <div class="img-box">
-          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-            <div>
-              <div class="head-text float-left">Product Name 1</div>
-              <div class="float-right">$000.00</div>
-            </div>
-            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
-
-            <div class="add-cart">
-              <button type="submit" class="btn btn-primary btn-add-cart">
-                <i class="fa fa-cart-plus fa-lg"></i>
-              </button>
-            </div>
-          </div>
-        </div>
       </div>
-      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-        <div class="img-box">
-          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-            <div>
-              <div class="head-text float-left">Product Name 3</div>
-              <div class="float-right">$000.00</div>
-            </div>
-            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
-
-            <div class="add-cart">
-              <button type="submit" class="btn btn-primary btn-add-cart">
-                <i class="fa fa-cart-plus fa-lg"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-        <div class="img-box">
-          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-            <div>
-              <div class="head-text float-left">Product Name 4</div>
-              <div class="float-right">$000.00</div>
-            </div>
-            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
-
-            <div class="add-cart">
-              <button type="submit" class="btn btn-primary btn-add-cart">
-                <i class="fa fa-cart-plus fa-lg"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-        <div class="img-box">
-          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-            <div>
-              <div class="head-text float-left">Product Name 4</div>
-              <div class="float-right">$000.00</div>
-            </div>
-            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
-
-            <div class="add-cart">
-              <button type="submit" class="btn btn-primary btn-add-cart">
-                <i class="fa fa-cart-plus fa-lg"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-        <div class="img-box">
-          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-            <div>
-              <div class="head-text float-left">Product Name 5</div>
-              <div class="float-right">$000.00</div>
-            </div>
-            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
-
-            <div class="add-cart">
-              <button type="submit" class="btn btn-primary btn-add-cart">
-                <i class="fa fa-cart-plus fa-lg"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--    </c:forEach>-->
     </div>
 
-  </div>
+
 </div>
