change cart design, include extra information to fill page

--- a/web/src/app/modules/shopping/cart/cart.component.html
+++ b/web/src/app/modules/shopping/cart/cart.component.html
@@ -1,5 +1,12 @@
 <div class="container">
   <div class="row">
+    <div class="alert alert-dismissible alert-primary alert-custom-brdr color-black">
+      The price and availability of items at eBuy.com are subject to change.
+      The Cart is a temporary place to store a list of your items and reflects each item's most recent price.
+      Shopping CartLearn more.
+    </div>
+  </div>
+  <div class="row">
 
     <!--  <c:if test="${cart == null}">-->
     <div class="card bg-light mb-3" *ngIf="false">
@@ -85,5 +92,14 @@
 
     </div>
     <!--  </c:if>-->
+  </div>
+  <div class="row">
+    <div class="col-md-8 col-sm-12"> </div>
+    <div class="col-md-4 col-sm-12 alert-0-l-r-p">
+      <div class="alert alert-dismissible alert-info alert-custom-brdr alert-0-l-r-mr color-black">
+        We'll ask you to <strong>Login!</strong> using your username and password or to create a new account if you dont have, it's mandatory to complete the checkout process.
+      </div>
+    </div>
+
   </div>
 </div>
