Add product details page, layout

--- a/web/src/app/modules/shopping/products/product-details/product-details.component.html
+++ b/web/src/app/modules/shopping/products/product-details/product-details.component.html
@@ -1,35 +1,35 @@
-<main class="acc-form">
+<div class="container">
+  <div class="row">
+    <div class="card border-info mb-3 pd">
 
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <img src="../../../../../assets/images/p1.jpg" class="col"  alt="product image banner"/>
+      <div class="card-header row">
+        <button type="submit" class="btn btn-primary">
+          <i class="fa fa-cart-plus fa-lg"></i>
+        </button>
       </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-6">
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <label class="btn btn-primary active">
-            <input type="button" > <i class="fa fa-cart-plus"></i>
-          </label>
-          <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> <i class="fa fa-cart-plus"></i> $0.00
-          </label>
-          <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> Add to Cart
-          </label>
+      <div class="card-body row">
+        <div class="well">
+          <div class="media">
+            <a class="pull-left" href="#">
+              <img class="media-object" src="http://placekitten.com/150/150">
+            </a>
+            <div class="media-body pd row">
+              <div class="col-md-7 col-sm-12"><h4 class="media-heading">Receta 1</h4></div>
+              <div class="col-md-5 col-sm-12"><p class="text-right">By Francisco</p></div>
+              <div class="col-12">
+                <p>Short description goes here</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
+                  Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
+                  dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+                  Aliquam in felis sit amet augue, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col">
-        <p> Brief Description goes here </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <p> Full Description goes here </p>
-      </div>
+
     </div>
   </div>
-</main>
+
+</div>
