--- a/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
+++ b/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
@@ -70,21 +70,23 @@
     <div class="row">
       <div  *ngFor="let product of (lstProduct | async)?.data" class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
         <div class="img-box">
-          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-            <div class="row">
-              <div class="head-text col-9">{{product.name}}</div>
-              <div class="col-3"></div>
-              <div class="prd-cat-price">${{product.price}}</div>
-            </div>
-            <div class="details-text row">{{product.shortDescription}}</div>
+          <a [routerLink]="['/product', product.id]">
+            <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
+            <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+              <div class="row">
+                <div class="head-text col-9">{{product.name}}</div>
+                <div class="col-3"></div>
+                <div class="prd-cat-price">${{product.price}}</div>
+              </div>
+              <div class="details-text row">{{product.shortDescription}}</div>
 
-            <div class="add-cart">
-              <button type="submit" class="btn btn-primary btn-add-cart">
-                <i class="fa fa-cart-plus fa-lg"></i>
-              </button>
+              <div class="add-cart">
+                <button type="submit" class="btn btn-primary btn-add-cart">
+                  <i class="fa fa-cart-plus fa-lg"></i>
+                </button>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
       </div>
