Add price in product details page

--- a/web/src/app/modules/shopping/products/product-details/product-details.component.html
+++ b/web/src/app/modules/shopping/products/product-details/product-details.component.html
@@ -1,11 +1,20 @@
 <div class="container">
   <div class="row">
-    <div class="card border-info mb-3 pd">
+    <div class="card cus-bar mb-3 pd mr-min-">
 
       <div class="card-header row">
-        <button type="submit" class="btn btn-primary">
-          <i class="fa fa-cart-plus fa-lg"></i>
-        </button>
+        <div class="col-md-6">
+          <button type="submit" class="btn btn-primary">
+            <i class="fa fa-cart-plus fa-lg"></i>
+          </button>
+        </div>
+        <div class="col-md-3">
+          <p style="text-align: right"><i class="fa fa-th">&nbsp;Stock<strong>&nbsp;&nbsp;In-Stock</strong></i></p>
+        </div>
+        <div class="col-md-3">
+         <p style="text-align: right"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;<strong>product.price</strong></p>
+        </div>
+
       </div>
       <div class="card-body row">
         <div class="well">
